<resources>
    <string name="app_name">Калькулятор</string>
    <string name="begin1">0</string>
    <string name="begin2">0</string>
    <string name="bc">C</string>
    <string name="plmn">±</string>
    <string name="proc">%</string>
    <string name="del">÷</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="mn">×</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="minus">−</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="plus">+</string>
    <string name="b0">0</string>
    <string name="drob">.</string>
    <string name="rav">=</string>


</resources>