<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/per1"
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/open_sans"
        android:gravity="end"
        android:hint="@string/begin1"
        android:text="@string/begin2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="25sp"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="clickNumber"
                android:id="@+id/bc"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#BBBFB2"
                android:text="@string/bc"
                android:textColor="#000000"
                android:textSize="35sp" />

            <Button
                android:onClick="abs"
                android:id="@+id/plmn"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#BBBFB2"
                android:text="@string/plmn"
                android:textColor="#000000"
                android:textSize="35sp" />

            <Button
                android:onClick="proc"
                android:id="@+id/proc"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#BBBFB2"
                android:text="@string/proc"
                android:textColor="#000000"
                android:textSize="35sp" />

            <Button
                android:onClick="operCh"
                android:id="@+id/del"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@drawable/backgroud_color"
                android:textColor="@color/text_color"
                android:text="@string/del"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b7"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b7"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b8"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b8"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b9"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b9"
                android:textSize="35sp" />

            <Button
                android:onClick="operCh"
                android:id="@+id/mn"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@drawable/backgroud_color"
                android:textColor="@color/text_color"
                android:text="@string/mn"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b4"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b4"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b5"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b5"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b6"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b6"
                android:textSize="35sp" />

            <Button
                android:onClick="operCh"
                android:id="@+id/minus"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@drawable/backgroud_color"
                android:textColor="@color/text_color"
                android:text="@string/minus"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b1"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b1"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b2"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b2"
                android:textSize="35sp" />

            <Button
                android:onClick="clickNumber"
                android:id="@+id/b3"
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#404040"
                android:text="@string/b3"
                android:textSize="35sp" />

            <Button
                android:onClick="operCh"
                android:id="@+id/plus"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@drawable/backgroud_color"
                android:textColor="@color/text_color"
                android:text="@string/plus"
                android:textSize="40sp" />

        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:onClick="clickNumber"
            android:id="@+id/b0"
            android:layout_width="166dp"
            android:layout_height="75dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#404040"
            android:text="@string/b0"
            android:paddingStart="-60dp"
            android:textSize="35sp" />

        <Button
            android:onClick="clickNumber"
            android:id="@+id/drob"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#404040"
            android:text="@string/drob"
            android:textSize="35sp" />

        <Button
            android:onClick="operCh"
            android:id="@+id/rav"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@drawable/backgroud_color"
            android:textColor="@color/text_color"
            android:text="@string/rav"
            android:textSize="40sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>


    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>